--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@500&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
 
   color-scheme: light dark;
